--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Bop\' em</string>
+    <string name="app_description">Este proyecto es basado</string>
 </resources>
