--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="button_about">About</string>
     <string name="button_settings">Settings</string>
     <string name="button_next">Next</string>
+    <string name="button_victory">Victoria</string>
+    <string name="button_lose">Derrota</string>
 
     <!--Preferences -->
     <string name="category_playerData">Datos del jugador</string>
